deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-deployment
  labels:
    app: netflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix-container
          image: joshikunal/netflix:latest
          ports:
            - containerPort: 8080 
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  type: LoadBalancer 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: netflix.example.com # Use your real domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
